--- a/Shcheglova-e.tex
+++ b/Shcheglova-e.tex
@@ -1,5 +1,5 @@
 \title{Impulsive Transition Matrix for a System of Differential-algebraic Equations\thanks{This work is financially supported by the project of ISDCT SB RAS ``Theory and methods for studying  of evolutionary equations and control systems with applications,'' no.~121041300060-4.}}
-\author{Alla A. Sccheglova}
+\author{Alla A. Shcheglova}
 \institute{ISDCT SB RAS, Irkutsk, Russia\\
   \email{shchegl@icc.ru}
 }
